Update styles.css dark mode issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -237,6 +237,7 @@ img {
 
 .home__blob-img {
   width: 450px;
+  background-color: transparent;
 }
 
 /*BUTTONS*/
